--- a/index.html
+++ b/index.html
@@ -271,36 +271,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
                 }
             }
         }
-        function showSidebar() {
-  $("#nav-icon3").toggleClass("open");
-  $("#dashboard-aside, #profile-aside ,#view-request-sidebar").toggleClass(
-    "show"
-  );
-}
-$(window).on("load", function () {
-  $(".navbar-toggler").on("click", function () {
-    $(this).toggleClass("open");
-  });
-  if ($(window).width() >= 768) {
-    $(window).scroll(function () {
-      const scroll = $(window).scrollTop();
-      if (scroll >= 100) {
-        $(".navbar").addClass("scroll");
-      } else {
-        $(".navbar").removeClass("scroll");
-      }
-    });
-  } else {
-    $(window).scroll(function () {
-      const scroll = $(window).scrollTop();
-      if (scroll >= 100) {
-        $(".navbar").removeClass("scroll");
-      } else {
-        $(".navbar").removeClass("scroll");
-      }
-    });
-  }
-});
+
     </script>
 
     <header>
@@ -1203,6 +1174,37 @@ $(window).on("load", function () {
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-
+<script>
+            function showSidebar() {
+  $("#nav-icon3").toggleClass("open");
+  $("#dashboard-aside, #profile-aside ,#view-request-sidebar").toggleClass(
+    "show"
+  );
+}
+$(window).on("load", function () {
+  $(".navbar-toggler").on("click", function () {
+    $(this).toggleClass("open");
+  });
+  if ($(window).width() >= 768) {
+    $(window).scroll(function () {
+      const scroll = $(window).scrollTop();
+      if (scroll >= 100) {
+        $(".navbar").addClass("scroll");
+      } else {
+        $(".navbar").removeClass("scroll");
+      }
+    });
+  } else {
+    $(window).scroll(function () {
+      const scroll = $(window).scrollTop();
+      if (scroll >= 100) {
+        $(".navbar").removeClass("scroll");
+      } else {
+        $(".navbar").removeClass("scroll");
+      }
+    });
+  }
+});
+</script>
 </main>
   <!--This file was exported by "Export WP Page to Static HTML" plugin which created by ReCorp (https://myrecorp.com) -->
