--- a/index.html
+++ b/index.html
@@ -445,12 +445,15 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
                             target="_blank">Shop now</a>
                         <div class="banner-social-container">
                             <a class="sbha-button banner-social-button"
-                                href="hhttps://www.facebook.com/AstaliftSingapore"><img src="images/facebook_icon.png"
+                                href="hhttps://www.facebook.com/AstaliftSingapore">
+                                <img class="fb-icon" src="images/facebook_icon.png"
+                                    alt="" /></a>
+                                    <a class="sbha-button banner-social-button"
+                                href="https://www.instagram.com/astaliftsg">
+                                <img class="insta-icon" src="images/instagram_icon.png"
                                     alt="" /></a><a class="sbha-button banner-social-button"
-                                href="https://www.instagram.com/astaliftsg"><img src="images/instagram_icon.png"
-                                    alt="" /></a><a class="sbha-button banner-social-button"
-                                href="https://www.youtube.com/channel/UC6WwJOo0m530yFIK3Zevq0A"><img
-                                    src="images/youtube_icon.png" alt="" /></a>
+                                href="https://www.youtube.com/channel/UC6WwJOo0m530yFIK3Zevq0A">
+                                <img class="youtube-icon" src="images/youtube_icon.png" alt="" /></a>
                         </div>
                     </div>
                     <div style="flex: 1;"></div>
