--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
                     </div>
                     <div id="steps-tab-content-4" class="steps-content-container ">
                         <img class="steps-content-img" src="images/step_4.gif" alt="" />
-                        <p class="steps-content-text">Wait for the sunscreen to set before applying makeup. Reapply the
+                        <p id="forth-step" class="steps-content-text">Wait for the sunscreen to set before applying makeup. Reapply the
                             sunscreen if needed.</p>
                     </div>
                 </div>
