--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
     <header>
         <nav id="nav" class="navbar fixed-top navbar-expand-lg navbar-light header-astalift">
             <div class="container-fluid section-container">
-                <a id="logo" class="navbar-brand">
+                <a id="logo" class="navbar-brand" href="http://www.astalift.com.sg/">
                     <img style="width: 200px;" class="logo-img" src="./images/Astalift logo.png" /></a>
                 <button id="nav-icon3" class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
